--- a/about.html
+++ b/about.html
@@ -110,298 +110,17 @@
       </div>
     </section>
 
-    <section class="ftco-section ftco-no-pt ftco-no-pb">
-      <div class="container">
-        <div class="row d-flex">
-          <div class="col-md-6 d-flex">
-            <div
-              class="img img-video d-flex align-self-stretch align-items-center justify-content-center justify-content-md-end"
-              style="background-image: url(images/about.jpg)"
-            >
-              <a
-                href="https://vimeo.com/45830194"
-                class="icon-video popup-vimeo d-flex justify-content-center align-items-center"
-              >
-                <span class="icon-play"></span>
-              </a>
-            </div>
-          </div>
-          <div class="col-md-6 pl-md-5 py-md-5">
-            <div class="row justify-content-start pt-3 pb-3">
-              <div class="col-md-12 heading-section ftco-animate">
-                <span class="subheading">Welcome to Entrust Legal</span>
-                <h2 class="mb-4">We Always Fight For Your Justice to Win</h2>
-                <p>
-                  Far far away, behind the word mountains, far from the
-                  countries Vokalia and Consonantia
-                </p>
-                <div class="tabulation-2 mt-4">
-                  <ul class="nav nav-pills nav-fill d-md-flex d-block">
-                    <li class="nav-item mb-md-0 mb-2">
-                      <a
-                        class="nav-link active py-2"
-                        data-toggle="tab"
-                        href="#home1"
-                        >Our Mission</a
-                      >
-                    </li>
-                    <li class="nav-item px-lg-2 mb-md-0 mb-2">
-                      <a class="nav-link py-2" data-toggle="tab" href="#home2"
-                        >Our Vision</a
-                      >
-                    </li>
-                    <li class="nav-item">
-                      <a
-                        class="nav-link py-2 mb-md-0 mb-2"
-                        data-toggle="tab"
-                        href="#home3"
-                        >Our Value</a
-                      >
-                    </li>
-                  </ul>
-                  <div class="tab-content bg-light rounded mt-2">
-                    <div class="tab-pane container p-0 active" id="home1">
-                      <p>
-                        Far far away, behind the word mountains, far from the
-                        countries Vokalia and Consonantia, there live the blind
-                        texts. Separated they live in Bookmarksgrove right at
-                        the coast of the Semantics, a large language ocean.
-                      </p>
-                    </div>
-                    <div class="tab-pane container p-0 fade" id="home2">
-                      <p>
-                        Far far away, behind the word mountains, far from the
-                        countries Vokalia and Consonantia, there live the blind
-                        texts. Separated they live in Bookmarksgrove right at
-                        the coast of the Semantics, a large language ocean.
-                      </p>
-                    </div>
-                    <div class="tab-pane container p-0 fade" id="home3">
-                      <p>
-                        Far far away, behind the word mountains, far from the
-                        countries Vokalia and Consonantia, there live the blind
-                        texts. Separated they live in Bookmarksgrove right at
-                        the coast of the Semantics, a large language ocean.
-                      </p>
-                    </div>
-                  </div>
-                </div>
-                <div class="years d-flex mt-4 mt-md-5">
-                  <h4>
-                    <span class="number mr-2" data-number="40">0</span>
-                    <span>Years of Experienced</span>
-                  </h4>
-                </div>
-              </div>
-            </div>
-          </div>
+    <section class="container my-5">
+      <div class="row align-items-center">
+        <!-- Left Column with Image -->
+        <div class="col-md-6 mb-5">
+          <img src="/images/about.svg" alt="Sample Image" class="img-fluid">
         </div>
-      </div>
-    </section>
-
-    <section
-      class="ftco-consultation ftco-section ftco-no-pt ftco-no-pb img"
-      style="background-image: url(images/bg_2.jpg)"
-    >
-      <div class="overlay"></div>
-      <div class="container">
-        <div class="row d-md-flex justify-content-end">
-          <div
-            class="col-md-6 half p-3 py-5 pl-md-5 ftco-animate heading-section heading-section-white"
-          >
-            <span class="subheading">Booking an Appointment</span>
-            <h2 class="mb-4">Free Consultation</h2>
-            <form action="#" class="consultation">
-              <div class="form-group">
-                <input
-                  type="text"
-                  class="form-control"
-                  placeholder="Your Name"
-                />
-              </div>
-              <div class="form-group">
-                <input
-                  type="text"
-                  class="form-control"
-                  placeholder="Your Email"
-                />
-              </div>
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Subject" />
-              </div>
-              <div class="form-group">
-                <textarea
-                  name=""
-                  id=""
-                  cols="30"
-                  rows="7"
-                  class="form-control"
-                  placeholder="Message"
-                ></textarea>
-              </div>
-              <div class="form-group">
-                <input
-                  type="submit"
-                  value="Send message"
-                  class="btn btn-dark py-3 px-4"
-                />
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="ftco-section testimony-section">
-      <div class="container">
-        <div class="row justify-content-center mb-5">
-          <div class="col-md-7 text-center heading-section ftco-animate">
-            <span class="subheading">Testimonial</span>
-            <h2 class="mb-4">Happy Clients</h2>
-          </div>
-        </div>
-        <div class="row ftco-animate">
-          <div class="col-md-12">
-            <div class="carousel-testimony owl-carousel ftco-owl">
-              <div class="item">
-                <div class="testimony-wrap py-4">
-                  <div class="text">
-                    <p class="mb-4">
-                      Far far away, behind the word mountains, far from the
-                      countries Vokalia and Consonantia, there live the blind
-                      texts.
-                    </p>
-                    <div class="d-flex align-items-center">
-                      <div
-                        class="user-img"
-                        style="background-image: url(images/person_1.jpg)"
-                      ></div>
-                      <div class="pl-3">
-                        <p class="name">Roger Scott</p>
-                        <span class="position">Marketing Manager</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="testimony-wrap py-4">
-                  <div class="text">
-                    <p class="mb-4">
-                      Far far away, behind the word mountains, far from the
-                      countries Vokalia and Consonantia, there live the blind
-                      texts.
-                    </p>
-                    <div class="d-flex align-items-center">
-                      <div
-                        class="user-img"
-                        style="background-image: url(images/person_2.jpg)"
-                      ></div>
-                      <div class="pl-3">
-                        <p class="name">Roger Scott</p>
-                        <span class="position">Marketing Manager</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="testimony-wrap py-4">
-                  <div class="text">
-                    <p class="mb-4">
-                      Far far away, behind the word mountains, far from the
-                      countries Vokalia and Consonantia, there live the blind
-                      texts.
-                    </p>
-                    <div class="d-flex align-items-center">
-                      <div
-                        class="user-img"
-                        style="background-image: url(images/person_3.jpg)"
-                      ></div>
-                      <div class="pl-3">
-                        <p class="name">Roger Scott</p>
-                        <span class="position">Marketing Manager</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="testimony-wrap py-4">
-                  <div class="text">
-                    <p class="mb-4">
-                      Far far away, behind the word mountains, far from the
-                      countries Vokalia and Consonantia, there live the blind
-                      texts.
-                    </p>
-                    <div class="d-flex align-items-center">
-                      <div
-                        class="user-img"
-                        style="background-image: url(images/person_1.jpg)"
-                      ></div>
-                      <div class="pl-3">
-                        <p class="name">Roger Scott</p>
-                        <span class="position">Marketing Manager</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="testimony-wrap py-4">
-                  <div class="text">
-                    <p class="mb-4">
-                      Far far away, behind the word mountains, far from the
-                      countries Vokalia and Consonantia, there live the blind
-                      texts.
-                    </p>
-                    <div class="d-flex align-items-center">
-                      <div
-                        class="user-img"
-                        style="background-image: url(images/person_2.jpg)"
-                      ></div>
-                      <div class="pl-3">
-                        <p class="name">Roger Scott</p>
-                        <span class="position">Marketing Manager</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="ftco-section ftco-no-pt ftco-no-pb">
-      <div class="container">
-        <div class="row d-flex justify-content-end">
-          <div class="col-md-8 py-4 px-md-4 bg-primary">
-            <div class="row">
-              <div class="col-md-6 ftco-animate d-flex align-items-center">
-                <h2 class="mb-0" style="color: white; font-size: 24px">
-                  Subcribe to our Newsletter
-                </h2>
-              </div>
-              <div class="col-md-6 d-flex align-items-center">
-                <form action="#" class="subscribe-form">
-                  <div class="form-group d-flex">
-                    <input
-                      type="text"
-                      class="form-control"
-                      placeholder="Enter email address"
-                    />
-                    <input
-                      type="submit"
-                      value="Subscribe"
-                      class="submit px-3"
-                    />
-                  </div>
-                </form>
-              </div>
-            </div>
-          </div>
+  
+        <!-- Right Column with Heading and Paragraph -->
+        <div class="col-md-6 heading-section">
+          <h2 class="mb-4">Leading full service law firm in India</h2>
+          <p>Entrust Legal is India’s leading law firm with a global reputation of being trusted advisers to its clients. The Firm advises a large and diverse set of clients, including domestic and foreign commercial enterprises, financial institutions, private equity and venture capital funds, start-ups, government and regulatory bodies. The Firm generalists, specialists and senior ex-regulators expertly guide clients across a spectrum of transactions, sectors and regulations. The Firm is one of the largest full-service law firm in India.</p>
         </div>
       </div>
     </section>
@@ -410,7 +129,7 @@
       <div class="container">
         <div class="row mb-5">
           <div class="col-md">
-            <div class="ftco-footer-widget mb-4">
+            <div class="ftco-footer-widget mb-4 ml-md-4">
               <img
                 style="width: 150px; margin: 0 0.5em"
                 src="./images/entrust_legal_logo.jpg"
@@ -530,7 +249,7 @@
               <h2 class="ftco-heading-2">Business Hours</h2>
               <div class="opening-hours">
                 <h4>Opening Days:</h4>
-                <p class="pl-3">
+                <p >
                   <span>Monday – Sunday: 9am to 10 pm</span>
                   
                 </p>
@@ -593,8 +312,7 @@
     <script src="js/aos.js"></script>
     <script src="js/jquery.animateNumber.min.js"></script>
     <script src="js/scrollax.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-    <script src="js/google-map.js"></script>
+    
     <script src="js/main.js"></script>
   </body>
 </html>
