--- a/index.html
+++ b/index.html
@@ -212,12 +212,30 @@
 
     <section class="ftco-section ftco-no-pt ftco-no-pb">
       <div class="container">
-        <div class="row d-flex">
-          <div class="col-md-6 d-flex">
+        <div class="row d-flex flex-column-reverse flex-md-row">
+          <!-- <div class="col-md-6 d-flex">
             <div
               class="img img-video d-flex align-self-stretch align-items-center justify-content-center justify-content-md-end"
               style="background-image: url(images/about.jpg)"
             ></div>
+          </div> -->
+          <div class="col-md-6 pl-md-5 img d-flex align-self-stretch align-items-center justify-content-center justify-content-md-end">
+            <div class="container">
+              <div class="row align-items-center justify-content-center">
+                <div class="col-5 col-md-4 mb-3">
+                  <img src="images/chatgpt.svg" alt="Logo 1" class="img-fluid">
+                </div>
+                <div class="col-5 col-md-4 mb-3">
+                  <img src="images/lucio_logo.avif" alt="Logo 3" class="img-fluid">
+                </div>
+                <div class="col-2 col-md-2 mb-3">
+                  <img src="images/copilot.svg" alt="Logo 4" class="img-fluid">
+                </div> 
+                <div class="col-5 col-md-4 mb-3">
+                  <img src="images/gemini.svg" alt="Logo 4" class="img-fluid">
+                </div> 
+              </div>
+            </div>
           </div>
           <div class="col-md-6 pl-md-5">
             <div class="row justify-content-start pt-3 pb-3">
@@ -286,12 +304,12 @@
                     </div>
                   </div>
                 </div> -->
-                <div class="years d-flex mt-4 mt-md-5">
+                <!-- <div class="years d-flex mt-4 mt-md-5">
                   <h4>
                     <span class="number mr-2" data-number="40">0</span>
                     <span>Years of Experienced</span>
                   </h4>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
@@ -313,45 +331,45 @@
               <div class="item">
                 <div
                   class="case img d-flex align-items-center justify-content-center"
-                  style="background-image: url(images/case-1.jpg)"
+                  style="background-image: url(images/case-11.jpg)"
                 >
-                  <div class="text text-center">
+                  <!-- <div class="text text-center">
                     <h3><a href="#">Legal Seperation</a></h3>
                     <span>Corporate</span>
-                  </div>
+                  </div> -->
                 </div>
               </div>
               <div class="item">
                 <div
                   class="case img d-flex align-items-center justify-content-center"
-                  style="background-image: url(images/case-2.jpg)"
+                  style="background-image: url(images/case-22.jpg)"
                 >
-                  <div class="text text-center">
+                  <!-- <div class="text text-center">
                     <h3><a href="#">Legal Seperation</a></h3>
                     <span>Corporate</span>
-                  </div>
+                  </div> -->
                 </div>
               </div>
               <div class="item">
                 <div
                   class="case img d-flex align-items-center justify-content-center"
-                  style="background-image: url(images/case-3.jpg)"
+                  style="background-image: url(images/case-33.jpg)"
                 >
-                  <div class="text text-center">
+                  <!-- <div class="text text-center">
                     <h3><a href="#">Legal Seperation</a></h3>
                     <span>Corporate</span>
-                  </div>
+                  </div> -->
                 </div>
               </div>
               <div class="item">
                 <div
                   class="case img d-flex align-items-center justify-content-center"
-                  style="background-image: url(images/case-4.jpg)"
+                  style="background-image: url(images/case-44.jpg)"
                 >
-                  <div class="text text-center">
+                  <!-- <div class="text text-center">
                     <h3><a href="#">Legal Seperation</a></h3>
                     <span>Corporate</span>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
@@ -369,18 +387,18 @@
     <section
       id="freeconsultation"
       class="ftco-consultation ftco-section ftco-no-pt ftco-no-pb img"
-      style="background-image: url(images/bg_2.jpg)"
+      style="background-image: url(images/bg_1.jpg)"
     >
       <div class="overlay"></div>
       <div class="container">
-        <div class="row d-md-flex justify-content-end">
+        <div class="row d-md-flex justify-content-center">
           <div
             class="col-md-6 half p-3 py-5 pl-md-5 ftco-animate heading-section heading-section-white"
           >
-            <span class="subheading">Booking an Appointment</span>
-            <h2 class="mb-4">Free Consultation</h2>
+            <span class="subheading text-center">Booking an Appointment</span>
+            <h2 class="mb-4 text-center">Free Consultation</h2>
             <form
-              action="https://mailthis.to/tocontactlawyer@gmail.com"
+              action="https://formsubmit.co/tocontactlawyer@gmail.com"
               method="POST"
               enctype="multipart/form-data"
               class="consultation"
@@ -419,11 +437,11 @@
                   placeholder="Message"
                 ></textarea>
               </div>
-              <div class="form-group">
+              <div class="form-group ">
                 <input
                   type="submit"
                   value="Send message"
-                  class="btn btn-dark py-3 px-4"
+                  class="btn btn-dark py-3 px-4 mx-auto d-block"
                 />
               </div>
               <input
@@ -608,7 +626,7 @@
       <div class="container">
         <div class="row mb-5">
           <div class="col-md">
-            <div class="ftco-footer-widget mb-4">
+            <div class="ftco-footer-widget mb-4 ml-md-4">
               <img
                 style="width: 150px; margin: 0 0.5em"
                 src="./images/entrust_legal_logo.jpg"
@@ -624,7 +642,7 @@
                 Vokalia and Consonantia, there live the blind texts.
               </p> -->
               <ul
-                class="ftco-footer-social list-unstyled float-md-left float-lft mt-5"
+                class="ftco-footer-social list-unstyled float-md-left float-left mt-5"
               >
                 <li class="ftco-animate">
                   <a href="#"><span class="icon-linkedin"></span></a>
@@ -728,7 +746,7 @@
               <h2 class="ftco-heading-2">Business Hours</h2>
               <div class="opening-hours">
                 <h4>Opening Days:</h4>
-                <p class="pl-3">
+                <p >
                   <span>Monday – Sunday: 9am to 10 pm</span>
                   
                 </p>
@@ -791,8 +809,7 @@
     <script src="js/aos.js"></script>
     <script src="js/jquery.animateNumber.min.js"></script>
     <script src="js/scrollax.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-    <script src="js/google-map.js"></script>
+    
     <script src="js/main.js"></script>
   </body>
 </html>
